# duckdb-pst

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  project.clj  vcpkg.json
.github/patches/extensions/ui/: fix_openssl_includes.patch
.github/workflows/: MainDistributionPipeline.yml
cpp-src/: pst_extension.cpp
cpp-src/include/: pst_extension.hpp
src/: function_state.cpp  pst_extension.cpp  pst_schema.cpp  pst_table_function.cpp  pstsdk_duckdb_filesystem.cpp  row_serializer.cpp  table_function.cpp
src/com/intellekt/: duckpst.jank
src/com/intellekt/duckpst/: core.jank  interop.jank  pst.jank
src/cxx/include/: utils.h
src/include/: function_state.hpp  pst_extension.hpp  pst_schema.hpp  pst_table_function.hpp  pstsdk_duckdb_filesystem.hpp  row_serializer.hpp  schema.hpp  table_function.hpp  utils.hpp
src/include/pst/: duckdb_filesystem.hpp  message.hpp  typed_bag.hpp
src/pst/: duckdb_filesystem.cpp
test/: unittest.pst
test/sql/: pst.test  query_optimizations.test  read_pst_folders.test  read_unittest_pst.test  table_function_parameters.test
